<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/alarm_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/background">

    <ImageButton
            android:id="@+id/on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:src="@drawable/off"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/on"
            android:layout_alignParentLeft="true"
            android:gravity="center">

        <TextView
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="09:40"
                android:textColor="#0F0"
                android:textSize="26sp">
        </TextView>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/tuesday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/wednesday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/thursday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/friday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/saturday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>

            <TextView
                    android:id="@+id/sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:text="@string/sunday_alias"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:textSize="14sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>